@@ -3,6 +3,8 @@
   Version 5.0.6  2012-06-
   ------------------------------------------------------------------------------
     - GUI debugging output was forced to be saved in the log file
+    - added "View change log", "View translation report" and
+      "Submit current translation" items to language menu
     - the following translations were updated:
 
       Arabic, Portuguese, Italian, Spanish (ES), Hebrew, Serbian, Javanese,
